fixed blog title styling to make it more readable

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -279,6 +279,7 @@ a.github:active {
 .intro-header .page-heading {
   padding: 100px 0 50px;
   color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
